first round of changes

--- a/index.html
+++ b/index.html
@@ -3,13 +3,21 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Page Title</title>
+    <title>Word Guess Game - Javascript HW</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="assets/css/reset.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="assets/css/style.css" />
-    <script src="assets/javascript/game.js"></script>
 </head>
 <body>
-    
+
+<script src="assets/javascript/game.js"></script>
+
+<p class="gameStart">Press any key to get started!</p> 
+
+<div class="guessWord">_ _ _ _</div>  
+<div class="wins"></div>
+<div class="guessRemaining"></div>
+<div class="lettersGuessed"></div>
+
 </body>
 </html>
