--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     <div class="col-md-6">
         
         <div class="leftside">
-            <img id="wordpic" src="assets/images/cersei.jpg" alt="Word Pic">
-            <p id="wordpicTitle">Cersei Lannister</p>
+            <img id="wordpic" src="assets/images/raven2.jpg" alt="Word Pic">
+            <p id="wordpicTitle">Valar Morghulis</p>
          </div>
 
     <div class="col-md-6">
