--- a/index.html
+++ b/index.html
@@ -30,9 +30,7 @@
 
         <div class="rightside">
 
-            <div class="gameTitles">Current Word</div>
-
-            <div class="gameTitles">Current Word</div>
+            <div class="gameTitles">Character Name</div>
                 <div id="underScores"></div>
 
             <div class="gameTitles">Guesses Remaining</div>
