--- a/index.html
+++ b/index.html
@@ -41,14 +41,31 @@
   
   </div>
 
+  <div id="myModal2" class="modal2">
+
+        <div class="modal-content2">
+        <span class="close2">&times;</span>
+                <h3>Congratulations! You won this round. Please try again.</h3>
+              </div>
+  </div>
+
+  <div id="myModal3" class="modal3">
+
+        <div class="modal-content2">
+        <span class="close3">&times;</span>
+                <h3>You ran out of guesses! Please try again.</h3>
+              </div>
+  </div>
+
 <div class="container">   
     <div id="row">
         <div class="leftside">
 
+            <div id="wins">Player Wins: 0</div>
             <div id="wordpic"><img class'character' src='assets/images/raven2.jpg' alt='GOT Character'></div>
             <p id="wordpicTitle">Welcome!</p>
             <p id="houseTitle">Valar Morghulis</p>
-            <div id="wins">Player Wins: 0</div>
+            
          </div>     
 
         <div class="rightside">
