mobile responsive changes

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <div id="wordpic"><img class'character' src='assets/images/raven2.jpg' alt='GOT Character'></div>
                 <p id="wordpicTitle">Welcome!</p>
                 <p id="houseTitle">Valar Morghulis</p>
-                <h3>Congratulations! You guessed it.</h3>
+                <h3>YES! You guessed it.</h3>
               </div>
   </div>
 
